<resources>
    <string name="app_name">Android Labs</string>
    <string name="message">Look at my GUI:</string>
    <string name="ButtonText">Click here</string>
    <string name="Switch">Switch on/off</string>
    <string name="toast_message">Here is more information</string>
    <string name="check_message">check this out!</string>
    <string name="type_message">Type here</string>
    <string name="undo_string">Undo</string>
    <string name="Switch_on">The switch is now on</string>
    <string name="Switch_off">The switch is now off</string>
    <string name="email_address">Enter your email address:</string>
    <string name="email_here">Type your email here</string>
    <string name="password">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="email">Your email:</string>
    <string name="picture">Your picture:</string>
    <string name="loginButton">Login</string>
    <string name="checkButton">Click the button above to take a picture:</string>
    <string name="name_here">Enter your name</string>
    <string name="goToChatRoom">Go to Chat room</string>
    <string name="sendButton">SEND</string>
    <string name="receiveButton">RECIVE</string>
    <string name="weatherForecast">Weather</string>



</resources>