<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp" >

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
         />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/typed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
         />

    <EditText
        android:id="@+id/typed_email"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture"
         />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />


    <TextView
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkButton" />

    <Button
        android:id="@+id/goToChatRoomButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text = "@string/goToChatRoom"
        />

    <Button
        android:id="@+id/weatherForecastButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text = "@string/weatherForecast"
        />


</LinearLayout>