<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_weight="1"
    android:layout_columnSpan="2"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_column="0"
        android:layout_row="1"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/check_message" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="160dp"
        android:layout_height="91dp"
        android:text="@string/Switch"
        android:layout_column="1"
        android:layout_row="2"
        android:checked="false" />

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0" />


</GridLayout>