<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/email_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"

        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/typed_email"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"

        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/myEditText2"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/loginButton"
        android:layout_gravity="center"/>

</LinearLayout>