<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_weight="0.5"
        android:gravity="fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/check_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="403dp"
        android:layout_weight="0.5"
        android:gravity="fill"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="160dp"
            android:layout_height="91dp"
            android:text="@string/Switch"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout3"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/myEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>